[FIX] *: onboarding reduce the darkness of the grey
Issue: the onboarding background is too dark and the view could breath
more on large screens

Fix: Use a slight linear gradient to reduce the darkness feeling and
add responsive spacing

task-3378939

part of: task-3326263

closes odoo/odoo#125872

--- a/odoo/addons/base/static/src/scss/onboarding.scss
+++ b/odoo/addons/base/static/src/scss/onboarding.scss
@@ -4,7 +4,7 @@ $o-onboarding-step-width: map-get($container-max-widths, 'lg') / 4 !default;
 
 
 .o_onboarding_main {
-    background-color: $o-onboarding-main-bg;
+    background: linear-gradient(0deg, #{$o-gray-200} 0%, #{$o-gray-100} 100%);
 
     .o_onboarding_wrap {
         overflow-x: auto;
