--- a/odoo/addons/base/static/src/scss/onboarding.variables.dark.scss
+++ b/odoo/addons/base/static/src/scss/onboarding.variables.dark.scss
@@ -2,6 +2,5 @@
 // ============================================================================
 // No CSS hacks, variables overrides only
 
-$o-onboarding-main-bg: $o-gray-100 !default;
 $o-onboarding-color-blue: #516db3 !default;
 $o-onboarding-color-orange: #c67c7a !default;
